--- a/UnitTestExercise/UnitTestExercise.Service/UnitTestExercise.Service.csproj
+++ b/UnitTestExercise/UnitTestExercise.Service/UnitTestExercise.Service.csproj
@@ -7,10 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interface\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\UnitTestExercise.Common\UnitTestExercise.Common.csproj" />
     <ProjectReference Include="..\UnitTestExercise.Repository\UnitTestExercise.Repository.csproj" />
   </ItemGroup>
 
